Update Sağlık Sigortası Masraf Tahmini.ipynb

--- a/Sağlık Sigortası Masraf Tahmini.ipynb
+++ b/Sağlık Sigortası Masraf Tahmini.ipynb
@@ -47,7 +47,7 @@
     "import pandas as pd\n",
     "\n",
     "# Dosya yolunu belirleyelim\n",
-    "file_path = \"C:/Users/Mutlu/Downloads/Health_insurance (2).csv\"\n",
+    "file_path = \"/kaggle/input/Health_insurance.csv\"\n",
     "# Veriyi yükleyelim\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
