--- a/Sağlık Sigortası Masraf Tahmin Projesi.ipynb
+++ b/Sağlık Sigortası Masraf Tahmin Projesi.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "file_path = \"C:/Users/Mutlu/Downloads/Health_insurance (2).csv\"\n",
+    "file_path = \"/kaggle/input/Health_insurance.csv\"\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
     "df_info = df.info()\n",
